--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Test App">
+    <meta name="description" content="Demo Users and Groups">
     <meta name="author" content="theotheu">
-    <title>Test App</title>
+    <title>Demo Users and Groups</title>
 
     <!-- Bootstrap core CSS -->
     <!-- Latest compiled and minified CSS -->
@@ -57,7 +57,7 @@
 
             <table>
                 <tr>
-                    <td>MySQL</td>
+                    <td>SQL</td>
                     <td>MongoDb</td>
                 </tr>
                 <tr>
