--- a/client/index.html
+++ b/client/index.html
@@ -83,14 +83,14 @@
             </table>
 
 
-            <p><a class="btn btn-primary" href="http://cria.tezzt.nl/wordpress/?page_id=336058" target="_blank">View
+            <p><a class="btn btn-primary" href="http://webdev.tezzt.nl" target="_blank">View
                 details &raquo;</a></p>
         </div>
     </div>
 
     <hr>
     <footer>
-        <p>CRIA-WT 2013</p>
+        <p>CRIA-WT 2014</p>
     </footer>
 </div>
 <!-- /container -->
